# DearPyPixl

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _containers.py  _grid.py  _menu.py  _tables.py  _test.py  index.html  pixle.html  pyproject.toml  requirements.txt  search.json  setup.cfg  setup.py  tests.py  windows.py
dearpypixl/: README.md  __init__.py  __main__.py  _appitems.py  _errors.py  _interface.py  _mkstub.py  _parsing.py  _tcoloritems.py  _tools.py  _tstyleitems.py  _typing.py  api.py  appevents.py  appitems.py  application.py  basic.py  color.py  color.pyi  colors.py  console.py  constants.py  containers.py  drawing.py  errors.py  events.py  grid.py  inputs.py  interface.py  itemevents.py  items.py  items.pyi  itemtypes.py  menu.py  misc.py  node.py  nodes.py  plotting.py  px_appstate.py  px_items.py  (+20 more)
dearpypixl/_dearpypixl/: __init__.py  api.py  callback.py  common.py  constants.py  errors.py  interface.py  mkstub.py  parsing.py  tools.py
dearpypixl/_internal/: __init__.py  callback.py  comtypes.py  constants.py  errors.py  item.py  members.py  registry.py  utilities.py
dearpypixl/appitems/: __init__.py  _application.py  application.py  basic.py  colors.py  containers.py  drawing.py  events.py  misc.py  node.py  nodes.py  plotting.py  table.py  tables.py  textures.py  values.py  valuetypes.py  viewport.py  widgets.py
dearpypixl/application/: __init__.py  application.py  frameevents.py  viewport.py
dearpypixl/components/: __init__.py  _themes.py  configuration.py  container.py  events.py  handlers.py  item.py  misc.py  other.py  primitives.py  registries.py  support.py  theme.py  themes.py  utilities.py  widget.py
dearpypixl/components/items/: fonts.py  handlers.py  registries.py  themes.py
dearpypixl/events/: __init__.py  events.py  handlers.py
dearpypixl/font/: __init__.py  font.py  presets.py
dearpypixl/item/: __init__.py  configuration.py  container.py  item.py  other.py  support.py  theme.py  widget.py
dearpypixl/items/: __init__.py  basic.py  colors.py  configuration.py  container.py  containers.py  drawing.py  handlers.py  inputs.py  item.py  misc.py  nodes.py  plotting.py  registries.py  support.py  tables.py  textures.py  theme.py  values.py  widget.py
dearpypixl/itemtypes/: __init__.py  item.py
dearpypixl/itemtypes/events/: __init__.py  events.py  handlers.py  keycodes.py
dearpypixl/itemtypes/themes/: __init__.py  _theme.py  font.py  presets.py
dearpypixl/raw_items/: __init__.py  containers.py  drawing.py  events.py  node.py  plotting.py  registries.py  table.py  valuetypes.py  widgets.py
dearpypixl/theme/: __init__.py  element.py  presets.py  theme.py
dearpypixl/tools/: __init__.py  appinfo.py  pyconsole.py
definitions/: _srcparser.py  appitems.json  clone.bat  main.py  srcparser.py  srcwriter.py
dpgwidgets/: __init__.py  _generate.py  _pyfiletext.py  _writelib.py  app.py  constants.py  containers.py  drawing.py  error.py  font.py  handler.py  handlers.py  item.py  keycodes.py  node.py  plotting.py  registries.py  theme.py  themes.py  tools.py  widget.py  widgets.py
dpgwidgets/_c_types/: __init__.py  windows.py
dpgwidgets/dpgwrap/: __init__.py  _item.py  _widget.py  containers.py  drawing.py  handlers.py  node.py  plot.py  plotting.py  registries.py  stylize.py  valueitems.py  widgets.py
dpgwidgets/libsrc/: __init__.py  constants.py  containers.py  drawing.py  handlers.py  node.py  plotting.py  registries.py  stylize.py  valuetypes.py  widgets.py
dpgwidgets/tools/: __init__.py  appinfo.py  pyconsole.py
dpgwrap/: __init__.py  _generate.py  _item.py  containers.py  drawing.py  node.py  plotting.py  stylize.py  valueitems.py  widgets.py
pixle/: __init__.py  application.py  containers.py  drawing.py  errors.py  events.py  plotting.py  table.py  theming.py  widgets.py
pixle/appitems/: __init__.py  containers.py  drawing.py  node.py  plotting.py  table.py  widgets.py
pixle/itemtypes/: __init__.py  container.py  support.py  widget.py
pixle/tools/: __init__.py  appinfo.py  dpgtools.py  pyconsole.py
scripts/: build.bat  mdgen.py  pxlibgen.py  stubgen.py
src/: lib.rs
src/dearpypixl/: __init__.py  _errors.py  _interface.py  _parsing.py  api.py  application.py  basic.py  color.py  color.pyi  console.py  constants.py  events.py  grid.py  grid.pyi  interop.py  items.py  items.pyi  menu.py  menus.py  runtime.py  runtime.pyi  style.py  style.pyi  theming.py  typing.py  viewport.py
src/dearpypixl/core/: __init__.py  appitem.py  appitem.pyi  codegen.py  errors.py  interface.py  itemtype.py  management.py  metautil.py  parsing.py  protocols.py  uuidpool.py
src/dearpypixl/lib/: __init__.py  application.py  application.pyi  constants.py  functions.py  items.py  items.pyi  viewport.py  viewport.pyi
src/dpgwidgets/: __init__.py  app.py  theme.py  themes.py  tools.py
src/dpgwidgets/tools/: __init__.py  pyconsole.py
src/dpgwrap/: __init__.py  _generate.py  _item.py  _widget.py  drawing.py  registries.py  widgets.py
src/libgen/: dearpypixl_lib_constants.py  dearpypixl_lib_items.py  generators.py  metadata.py
src/typestubs/: grid.pyi
