[package]
name = "_dearpypixl"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_dearpypixl"
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies.pyo3]
version = "*"
features = ["extension-module"]


