[project]
name = "dearpypixl"
version = "2.2.0"
description = "An object-oriented, lightweight, modular framework and toolkit for Dear PyGui."
authors = [{name="Anthony Doupe", email="atlamillias@outlook.com"}]
keywords = ["dearpygui", "gui", "ui", "user-interface"]
urls = {Homepage="https://github.com/Atlamillias/DearPyPixl"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",

    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.14"
dependencies = [
    "dearpygui >= 2.3",
]


[build-system]
requires = ["uv_build<=1.0"]
build-backend = "uv_build"



# [pyright]
[tool.pyright]
typeCheckingMode = "off"
include = ["./src/dearpypixl", "./src/dearpypixl/lib", "./src/libgen", "./scripts"]
exclude = ["docs", ".venv", "**/.*", "**/__pycache__", "**/node_modules"]
extraPaths = ["./src/libgen"]
openFilesOnly = true


# [pyrefly]
[tool.pyrefly]
python-interpreter-path = "./.venv/Scripts/python.exe"
project-includes = ["./src", "./"]
permissive-ignores = true

[tool.pyrefly.errors]
unannotated-protocol-member = false

[[tool.pyrefly.sub-config]]
matches = "./src/dearpypixl/lib/appitem.pyi"
[tool.pyrefly.sub-config.errors]
bad-override = false

[[tool.pyrefly.sub-config]]
matches = "./src/dearpypixl/lib/items.py"
[tool.pyrefly.sub-config.errors]
invalid-decorator = false

[[tool.pyrefly.sub-config]]
matches = "./src/libgen/dearpypixl_lib_items.py"
[tool.pyrefly.sub-config.errors]
bad-specialization = false
bad-function-definition = false
missing-attribute = false
bad-argument-type = false

[[tool.pyrefly.sub-config]]
matches = "./src/dearpypixl/lib/items.pyi"
[tool.pyrefly.sub-config.errors]
inconsistent-inheritance = 'warn'
