[metadata]
name = dearpypixl
version = 0.4.0
author = Anthony Doupe
author_email = atlamillias@gmail.com
description = Object-oriented bindings and extensions for DearPyGui.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Atlamillias/pixl-engine/tree/dpg1.0
download_url = https://github.com/Atlamillias/pixl-engine.git
license = MIT
license_files = 
    LICENSE
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
[options]
zip_safe = False
packages = 
    dearpypixl
    dearpypixl.components
    dearpypixl.components.items
    dearpypixl.platforms
    dearpypixl.appitems
    dearpypixl.tools
    dearpypixl.application
python_requires = >= 3.10.*
setup_requires = 
    setuptools >= 46.4.0
install_requires =
    dearpygui >= 1.6.1, < 1.9.0
    typing_extensions >= 4.0.0
