[metadata]
name                          = dearpypixl
version                       = 0.4.0
author                        = Anthony Doupe
author_email                  = atlamillias@gmail.com
description                   = Object-oriented bindings and extensions for DearPyGui.
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/Atlamillias/dearpypixl
download_url                  = https://github.com/Atlamillias/dearpypixl.git
license                       = MIT
license_files                 = LICENSE
classifiers                   =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10

[options]
python_requires      = >= 3.11.*
setup_requires       =
    setuptools >= 46.4.0
install_requires     =
    dearpygui >= 1.8.0
packages             = dearpypixl
zip_safe             = True
include_package_data = True


[options.package_data]
* = README.md
_dearpypixl = _dearpypixl, /target/release/_dearpypixl.dll




